--- a/app/src/main/res/layout/fragment_chatitem_list.xml
+++ b/app/src/main/res/layout/fragment_chatitem_list.xml
@@ -23,9 +23,17 @@
                     android:orientation="horizontal"
                     android:padding="5dp"
                     android:background="#ECEFF1"
-                    android:layout_alignParentBottom="true"
+        android:layout_above="@+id/emojPanel"
                     android:layout_centerHorizontal="true">
 
+        <TextView
+            android:id="@+id/chat_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="#383838"
+            android:textSize="16sp"
+            />
         <EditText android:id="@+id/messageText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -46,4 +54,19 @@
                 android:layout_alignTop="@+id/messageText"/>
 
     </RelativeLayout>
+    <RelativeLayout android:id="@+id/emojPanel" android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:background="#ECEFF1"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+
+    <FrameLayout
+        android:id="@+id/Container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ></FrameLayout>
+    </RelativeLayout>
+
 </RelativeLayout>
