--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -137,14 +137,28 @@
             </android.support.design.widget.TextInputLayout>
 
 
-            <Button
-                    android:id="@+id/email_sign_in_button"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/action_sign_in"
-                    android:textStyle="bold"/>
+            <LinearLayout android:layout_below="@+id/user_details_form"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:layout_marginTop="16dp"
+                          android:orientation="horizontal">
+
+                <Button
+                        android:id="@+id/email_sign_in_button"
+                        style="?android:textAppearanceSmall"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" android:text="@string/action_sign_in"
+                        android:textStyle="bold"/>
+
+                <Button
+                        android:id="@+id/cancel_button"
+                        style="?android:textAppearanceSmall"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" android:text="@string/action_sign_in_cancel"/>
+            </LinearLayout>
+
 
         </LinearLayout>
     </ScrollView>
